Refactor Final