@@ -13,6 +13,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class PaymentOutboxRepositoryImpl implements PaymentOutboxRepository {
@@ -40,18 +41,21 @@ public class PaymentOutboxRepositoryImpl implements PaymentOutboxRepository {
     String sagaType,
     OutboxStatus outboxStatus,
     SagaStatus... sagaStatus) {
-    return Optional.of(paymentOutboxJpaRepository.findByTypeAndOutboxStatusAndSagaStatusIn(
-        sagaType, outboxStatus, Arrays.asList(sagaStatus))
+    return Optional.of(paymentOutboxJpaRepository.findByTypeAndOutboxStatusAndSagaStatusIn(sagaType,
+        outboxStatus,
+        Arrays.asList(sagaStatus))
       .orElseThrow(() -> new PaymentOutboxNotFoundException("Payment outbox object " +
         "could not be found for saga type " + sagaType))
       .stream()
       .map(paymentOutboxDataAccessMapper::paymentOutboxEntityToOrderPaymentOutboxMessage)
-      .toList());
+      .collect(Collectors.toList()));
   }
 
   @Override
   public Optional<OrderPaymentOutboxMessage> findByTypeAndSagaIdAndSagaStatus(
-    String type, UUID sagaId, SagaStatus... sagaStatus) {
+    String type,
+    UUID sagaId,
+    SagaStatus... sagaStatus) {
     return paymentOutboxJpaRepository
       .findByTypeAndSagaIdAndSagaStatusIn(type, sagaId, Arrays.asList(sagaStatus))
       .map(paymentOutboxDataAccessMapper::paymentOutboxEntityToOrderPaymentOutboxMessage);
@@ -59,7 +63,7 @@ public class PaymentOutboxRepositoryImpl implements PaymentOutboxRepository {
 
   @Override
   public void deleteByTypeAndOutboxStatusAndSagaStatus(String type, OutboxStatus outboxStatus, SagaStatus... sagaStatus) {
-    paymentOutboxJpaRepository.deleteByTypeAndOutboxStatusAndSagaStatusIn(
-      type, outboxStatus, Arrays.asList(sagaStatus));
+    paymentOutboxJpaRepository.deleteByTypeAndOutboxStatusAndSagaStatusIn(type, outboxStatus,
+      Arrays.asList(sagaStatus));
   }
 }
