@@ -1,7 +1,7 @@
 package com.food.ordering.system.order.service.dataaccess.restaurant.mapper;
 
-import com.food.ordering.system.dataaccess.restaurant.entity.RestaurantEntity;
-import com.food.ordering.system.dataaccess.restaurant.exception.RestaurantDataAccessException;
+import com.food.ordering.system.dataaccess.entity.RestaurantEntity;
+import com.food.ordering.system.dataaccess.exception.RestaurantDataAccessException;
 import com.food.ordering.system.domain.valueobject.Money;
 import com.food.ordering.system.domain.valueobject.ProductId;
 import com.food.ordering.system.domain.valueobject.RestaurantId;
@@ -11,6 +11,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class RestaurantDataAccessMapper {
@@ -18,7 +19,7 @@ public class RestaurantDataAccessMapper {
   public List<UUID> restaurantToRestaurantProducts(Restaurant restaurant) {
     return restaurant.getProducts().stream()
       .map(product -> product.getId().getValue())
-      .toList();
+      .collect(Collectors.toList());
   }
 
   public Restaurant restaurantEntityToRestaurant(List<RestaurantEntity> restaurantEntities) {
@@ -26,10 +27,8 @@ public class RestaurantDataAccessMapper {
       restaurantEntities.stream().findFirst().orElseThrow(() ->
         new RestaurantDataAccessException("Restaurant could not be found!"));
 
-    List<Product> restaurantProducts = restaurantEntities.stream()
-      .map(entity -> new Product(
-        new ProductId(entity.getProductId()),
-        entity.getProductName(),
+    List<Product> restaurantProducts = restaurantEntities.stream().map(entity ->
+      new Product(new ProductId(entity.getProductId()), entity.getProductName(),
         new Money(entity.getProductPrice()))).toList();
 
     return Restaurant.builder()
