@@ -1,22 +1,22 @@
 package com.food.ordering.system.order.service.messaging.mapper;
 
-import com.food.ordering.system.domain.outbox.PaymentStatus;
-import com.food.ordering.system.domain.outbox.RestaurantStatus;
 import com.food.ordering.system.kafka.order.avro.model.*;
-import com.food.ordering.system.order.service.domain.dto.message.CustomerCreated;
+import com.food.ordering.system.order.service.domain.dto.message.CustomerModel;
 import com.food.ordering.system.order.service.domain.dto.message.PaymentResponse;
-import com.food.ordering.system.order.service.domain.dto.message.RestaurantResponse;
+import com.food.ordering.system.order.service.domain.dto.message.RestaurantApprovalResponse;
+import com.food.ordering.system.order.service.domain.outbox.model.approval.OrderApprovalEventPayload;
 import com.food.ordering.system.order.service.domain.outbox.model.payment.OrderPaymentEventPayload;
-import com.food.ordering.system.order.service.domain.outbox.model.restaurant.OrderRestaurantEventPayload;
 import org.springframework.stereotype.Component;
 
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class OrderMessagingDataMapper {
 
-  public PaymentResponse paymentResponse(
-    PaymentResponseAvroModel paymentResponseAvroModel) {
+  public PaymentResponse paymentResponseAvroModelToPaymentResponse(
+    PaymentResponseAvroModel
+      paymentResponseAvroModel) {
     return PaymentResponse.builder()
       .id(paymentResponseAvroModel.getId())
       .sagaId(paymentResponseAvroModel.getSagaId())
@@ -25,28 +25,31 @@ public class OrderMessagingDataMapper {
       .orderId(paymentResponseAvroModel.getOrderId())
       .price(paymentResponseAvroModel.getPrice())
       .createdAt(paymentResponseAvroModel.getCreatedAt())
-      .paymentStatus(PaymentStatus.valueOf(
+      .paymentStatus(com.food.ordering.system.domain.valueobject.PaymentStatus.valueOf(
         paymentResponseAvroModel.getPaymentStatus().name()))
       .failureMessages(paymentResponseAvroModel.getFailureMessages())
       .build();
   }
 
-  public RestaurantResponse restaurantResponse(
-    RestaurantResponseAvroModel restaurantResponseAvroModel) {
-    return RestaurantResponse.builder()
-      .id(restaurantResponseAvroModel.getId())
-      .sagaId(restaurantResponseAvroModel.getSagaId())
-      .restaurantId(restaurantResponseAvroModel.getRestaurantId())
-      .orderId(restaurantResponseAvroModel.getOrderId())
-      .createdAt(restaurantResponseAvroModel.getCreatedAt())
-      .restaurantStatus(RestaurantStatus.valueOf(
-        restaurantResponseAvroModel.getRestaurantOrderStatus().name()))
-      .failureMessages(restaurantResponseAvroModel.getFailureMessages())
+  public RestaurantApprovalResponse
+  approvalResponseAvroModelToApprovalResponse(
+    RestaurantApprovalResponseAvroModel
+      restaurantApprovalResponseAvroModel) {
+    return RestaurantApprovalResponse.builder()
+      .id(restaurantApprovalResponseAvroModel.getId())
+      .sagaId(restaurantApprovalResponseAvroModel.getSagaId())
+      .restaurantId(restaurantApprovalResponseAvroModel.getRestaurantId())
+      .orderId(restaurantApprovalResponseAvroModel.getOrderId())
+      .createdAt(restaurantApprovalResponseAvroModel.getCreatedAt())
+      .orderApprovalStatus(com.food.ordering.system.domain.valueobject.OrderApprovalStatus.valueOf(
+        restaurantApprovalResponseAvroModel.getOrderApprovalStatus().name()))
+      .failureMessages(restaurantApprovalResponseAvroModel.getFailureMessages())
       .build();
   }
 
-  public PaymentRequestAvroModel paymentRequestAvroModel(
-    String sagaId, OrderPaymentEventPayload orderPaymentEventPayload) {
+  public PaymentRequestAvroModel orderPaymentEventToPaymentRequestAvroModel(
+    String sagaId, OrderPaymentEventPayload
+    orderPaymentEventPayload) {
     return PaymentRequestAvroModel.newBuilder()
       .setId(UUID.randomUUID().toString())
       .setSagaId(sagaId)
@@ -58,27 +61,29 @@ public class OrderMessagingDataMapper {
       .build();
   }
 
-  public RestaurantRequestAvroModel restaurantStatusRequestAvroModel(
-    String sagaId, OrderRestaurantEventPayload orderRestaurantEventPayload) {
-    return RestaurantRequestAvroModel.newBuilder()
+  public RestaurantApprovalRequestAvroModel
+  orderApprovalEventToRestaurantApprovalRequestAvroModel(
+    String sagaId, OrderApprovalEventPayload
+    orderApprovalEventPayload) {
+    return RestaurantApprovalRequestAvroModel.newBuilder()
       .setId(UUID.randomUUID().toString())
       .setSagaId(sagaId)
-      .setOrderId(orderRestaurantEventPayload.getOrderId())
-      .setRestaurantId(orderRestaurantEventPayload.getRestaurantId())
+      .setOrderId(orderApprovalEventPayload.getOrderId())
+      .setRestaurantId(orderApprovalEventPayload.getRestaurantId())
       .setRestaurantOrderStatus(RestaurantOrderStatus
-        .valueOf(orderRestaurantEventPayload.getRestaurantOrderStatus()))
-      .setProductAvroModels(orderRestaurantEventPayload.getProducts().stream()
-        .map(restaurantApprovedEventProduct -> ProductAvroModel.newBuilder()
-          .setId(restaurantApprovedEventProduct.getId())
-          .setQuantity(restaurantApprovedEventProduct.getQuantity())
-          .build()).toList())
-      .setPrice(orderRestaurantEventPayload.getPrice())
-      .setCreatedAt(orderRestaurantEventPayload.getCreatedAt().toInstant())
+        .valueOf(orderApprovalEventPayload.getRestaurantOrderStatus()))
+      .setProducts(orderApprovalEventPayload.getProducts().stream().map(orderApprovalEventProduct ->
+        ProductAvroModel.newBuilder()
+          .setId(orderApprovalEventProduct.getId())
+          .setQuantity(orderApprovalEventProduct.getQuantity())
+          .build()).collect(Collectors.toList()))
+      .setPrice(orderApprovalEventPayload.getPrice())
+      .setCreatedAt(orderApprovalEventPayload.getCreatedAt().toInstant())
       .build();
   }
 
-  public CustomerCreated customerRequest(CustomerAvroModel customerAvroModel) {
-    return CustomerCreated.builder()
+  public CustomerModel customerAvroModeltoCustomerModel(CustomerAvroModel customerAvroModel) {
+    return CustomerModel.builder()
       .id(customerAvroModel.getId())
       .username(customerAvroModel.getUsername())
       .firstName(customerAvroModel.getFirstName())
