@@ -1,6 +1,6 @@
 package com.food.ordering.system.payment.service.dataaccess.outbox.adapter;
 
-import com.food.ordering.system.domain.outbox.PaymentStatus;
+import com.food.ordering.system.domain.valueobject.PaymentStatus;
 import com.food.ordering.system.outbox.OutboxStatus;
 import com.food.ordering.system.payment.service.dataaccess.outbox.exception.OrderOutboxNotFoundException;
 import com.food.ordering.system.payment.service.dataaccess.outbox.mapper.OrderOutboxDataAccessMapper;
@@ -12,6 +12,7 @@ import org.springframework.stereotype.Component;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class OrderOutboxRepositoryImpl implements OrderOutboxRepository {
@@ -37,11 +38,11 @@ public class OrderOutboxRepositoryImpl implements OrderOutboxRepository {
   @Override
   public Optional<List<OrderOutboxMessage>> findByTypeAndOutboxStatus(String sagaType, OutboxStatus outboxStatus) {
     return Optional.of(orderOutboxJpaRepository.findByTypeAndOutboxStatus(sagaType, outboxStatus)
-      .orElseThrow(() -> new OrderOutboxNotFoundException("Status outbox object " +
+      .orElseThrow(() -> new OrderOutboxNotFoundException("Approval outbox object " +
         "cannot be found for saga type " + sagaType))
       .stream()
       .map(orderOutboxDataAccessMapper::orderOutboxEntityToOrderOutboxMessage)
-      .toList());
+      .collect(Collectors.toList()));
   }
 
   @Override
